--- a/content/css/style.scss
+++ b/content/css/style.scss
@@ -1,13 +1,28 @@
-$topnav-height: 50px;
+
+//globals
+.noselect{
+    user-select: none;
+}
+
 $page-content-maxWidth: 1200px;
+$header:(
+    "background":hsla(0, 0%, 20%,1),
+    "height": 50px,
+);
+$main-content-menu:(
+    "background":#2a1e30,
+    "text-color":hsl(0,0%,80%),
+    "text-hover-color":hsl(0,0%,90%),
+);
+
 
 
 
 @keyframes topNav_compress{
-    0%{height:$topnav-height; background:hsla(0, 0, 100,0);}
+    0%{height:map-get($header,'height'); background:hsla(0, 0, 100,0);}
     70%{}
     99%{}
-    100% {height:calc(#{$topnav-height} - 10px); background:hsla(0, 0, 100,1);}
+    100% {height:calc(#{map-get($header,'height')} - 10px); background:hsla(0, 0, 100,1);}
 }
 
 @keyframes topNav_borderBottom_Dis{
@@ -252,11 +267,17 @@ $media-expressions: (
 
     @return $number * nth($units, $index);
 }
-  
+
+html{
+    height: 100%;
+    width: 100%;
+}
 
 body{
     background: hsl(0,0%,67%);
-    height: 2500px;
+    margin-top: map-get($header,'height');
+    width: 100%;
+    height: calc(100% - #{map-get($header,'height')});
 }
 
 header{
@@ -264,12 +285,12 @@ header{
     top: 0;
     z-index: 1020;
     width: 100%;
-    height: $topnav-height;
+    height: map-get($header,'height');
     transition: .2s linear all;
     opacity: 1;
-    background:hsla(0, 0%, 20%,1);
+    background:map-get($header,"background");
     &.filled{
-        height:calc(#{$topnav-height} - 10px);
+        height:calc(#{map-get($header,'height')} - 10px);
         background:hsla(0, 0, 100,1);
         animation: topNav_compress .5s ease-out;
         .broch-header-bottom{
@@ -345,7 +366,6 @@ header{
 
 .nav_header{
     display: flex;
-    justify-content: space-between;
     height: 100%;
     width: 100%;
     max-width: $page-content-maxWidth;
@@ -370,7 +390,6 @@ header{
         justify-content: center;
         height: 100%;
         width: 100%;
-        padding: .25rem 1.5rem .25rem 1.5rem;
         img{
             filter: contrast(.9);
             display: flex;
@@ -472,7 +491,7 @@ header{
     }
 }
 .navMenu{
-    width: 170px;
+    //width: 170px;
 }
 @include media("screen", "<tablet") {
     .menu-topmenu-container{
@@ -574,4 +593,67 @@ header{
         }
     }
     
+}
+
+
+//content
+.content-view{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    background: salmon;
+}
+.main-content-menu{
+    display: flex;
+    flex-direction: column;
+    width: 250px;
+    height: 100%;
+    background: map-get($main-content-menu,'background');
+    color: map-get($main-content-menu,'text-color');
+    .main-content-search-container{
+        width: 100%;
+        //height: 30px;
+        padding: 20px;
+        background: hsla(0, 0%, 79%,.05);
+        box-sizing: border-box;
+    }
+    .main-content-menu-container{
+        width: 100%;
+        overflow-y: auto;
+        font-size: 18px;
+        background: hsla(195, 53%, 79%,.05);
+        a{
+            text-decoration: none;
+            div{
+                padding: 8px;
+                color: map-get($main-content-menu,'text-color');
+                &:hover{
+                    background: hsla(195, 53%, 79%,.15);
+                    color: map-get($main-content-menu,'text-hover-color');
+                    cursor:pointer;
+                }
+            }
+        }
+    }
+}
+.main-content-content-container{
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    padding: 20px;
+    flex: 1;
+    overflow:auto;
+    background: hsl(0, 0%, 95%);
+    font-family: Roboto;
+    
+    h1{
+        margin-top: 1rem;
+        margin-bottom: .5rem;
+        font-size: 3rem;
+    }
+    h2{
+        margin-top: 2rem;
+        margin-bottom: .5rem;
+        font-size: 2rem;
+    }
 }
