--- a/content/css/.alvear_dnd.scss
+++ b/content/css/.alvear_dnd.scss
@@ -8,15 +8,19 @@
 .alvear-dnd-card-container{
     display: flex;
     position: relative;
-    width: 470px;
-    max-width: 470px;
+    width: 420px;
+    max-width: 420px;
     height: fit-content;
     background-color: hsla(0,0%,80%,1);
     padding: 10px;
-    margin: 10px 20px 20px 0px;
+    margin: 10px 40px 40px 0px;
     box-sizing: border-box;
     justify-content: center;
     align-items: center;
+
+    &.dnd-race{
+        justify-content: left;
+    }
 
     &:before{
         content: "";
@@ -37,6 +41,16 @@
         width: 75%;
         right: 0px;
         
+        &.dragonborn:after{ background-image: url("/dndcsgo/images/races/dragonborn.png"); }
+        &.dwarf:after{ background-image: url("/dndcsgo/images/races/dwarf.png"); }
+        &.elf:after{ background-image: url("/dndcsgo/images/races/elf.png"); }
+        &.gnome:after{ background-image: url("/dndcsgo/images/races/gnome.png"); }
+        &.halfElf:after{ background-image: url("/dndcsgo/images/races/halfElf.png"); }
+        &.halfling:after{ background-image: url("/dndcsgo/images/races/halfling.png"); }
+        &.halfOrc:after{ background-image: url("/dndcsgo/images/races/halfOrc.png"); }
+        &.human:after{ background-image: url("/dndcsgo/images/races/human.png"); }
+        &.tiefling:after{ background-image: url("/dndcsgo/images/races/tiefling.png"); }
+
         &.barbarian:after{ background-image: url("/dndcsgo/images/barbarian.png"); }
         &.bard:after{ background-image: url("/dndcsgo/images/bard.png"); }
         &.cleric:after{ background-image: url("/dndcsgo/images/cleric.png"); }
@@ -61,24 +75,33 @@
             left: 0px;
             opacity: 1;
         }
+        &.raceIcon:after{
+            background-position: 60px 0%;
+        }
     }
 
 
     .alvear-dnd-card-content{
         z-index: 5;
         background: hsla(0,0%,95%,.8);
-        width: 100%;
         padding: 15px 10px;
         box-sizing: border-box;
+        &.dnd-class{
+            width: 100%;
+        }
+        &.dnd-race{
+            width: 50%;
+        }
         .alvear-dnd-card-content-header{
             .alvear-dnd-card-content-header-icon{
                 vertical-align: top;
                 display: inline-flex;
+                justify-content: center;
                 width: 70px;
                 height: 70px;
                 margin: 0px 10px 10px 0px;
                 position: relative;
-                background-color: #2e0000;
+                background-color: #431f1f;
                 border-radius: 10px;
                 &:before{
                     content: "";
@@ -89,12 +112,12 @@
                     right: 0px;
                     bottom: 0px;
                     left: 0px;
-                    opacity: .3;
+                    opacity: .1;
                 }
                 img{
                     object-fit: cover;
                     height: auto;
-                    width: 100%;
+                    width: 75%;
                     z-index: 5;
                 }
             }
@@ -103,6 +126,9 @@
                 display: inline-flex;
                 flex-direction: column;
                 width: calc(100% - 100px);
+                &.dnd-race{
+                    width: 100%;
+                }
                 h1.alvear-dnd-after{
                     margin: 0;
                     font-size: 20px;
@@ -142,11 +168,13 @@
     }
     .alvear-dnd-button-container{
         z-index: 5;
-        width: 200px;
+        width: 100%;
         height: 30px;
         display: flex;
         position: absolute;
         bottom: -15px;
+        left: 0;
+        justify-content: center;
         a{display: flex;}
         button{
             font-size: 12px;
@@ -156,5 +184,134 @@
             padding: 0px 10px;
             margin: 0px 5px;
         }
+    }
+}
+
+
+.dnd-classRace-banner{
+    display: flex;
+    height: 350px;
+    width: 100%;
+    &.bard{
+        background: url("/dndcsgo/images/classBanners/bard.jpg");
+    }
+    &.cleric{
+        background: url("/dndcsgo/images/classBanners/cleric.jpg");
+    }
+    &.fighter{
+        background: url("/dndcsgo/images/classBanners/fighter.jpg");
+    }
+    &.monk{
+        background: url("/dndcsgo/images/classBanners/monk.jpg");
+    }
+    &.paladin{
+        background: url("/dndcsgo/images/classBanners/paladin.jpg");
+    }
+    &.ranger{
+        background: url("/dndcsgo/images/classBanners/ranger.jpg");
+    }
+    &.rogue{
+        background: url("/dndcsgo/images/classBanners/rogue.jpg");
+    }
+    &.sorcerer{
+        background: url("/dndcsgo/images/classBanners/sorcerer.jpg");
+    }
+    &.warlock{
+        background: url("/dndcsgo/images/classBanners/warlock.jpg");
+    }
+    &.wizard{
+        background: url("/dndcsgo/images/classBanners/wizard.jpg");
+    }
+    background-position: 0 5% !important;
+    background-size: cover !important;
+    background-repeat: no-repeat !important;
+    align-items: center;
+    justify-content: left;
+    .classRace-banner-title{
+        h1{
+            margin-top: 0 !important;
+            margin-left: 50px;
+            color: #efefef;
+            font-size: 95px !important;
+            text-shadow: 2px 2px hsla(0, 0%, 10%, .9);
+        }
+        h2{
+            margin-bottom: -10px !important;
+            margin-left: 50px;
+            color: #efefef;
+            font-size: 25px !important;
+            text-shadow: 2px 2px hsla(0, 0%, 10%, .9);
+            text-transform: uppercase;
+        }
+        margin-bottom: 50px !important;
+    }
+
+}
+
+.dnd-classRace-content{
+    max-width: 75%;
+    padding-left: 20px;
+    .dnd-mech{
+        h2{
+            font-weight: 500 !important;
+        }
+    
+        h3{
+            font-weight: 500 !important;
+            font-size: 1.3rem;
+            margin-left: 30px;
+        }
+    
+        h4{
+            font-weight: 700 !important;
+            font-size: 1rem;
+            margin-left: 60px;
+            margin-bottom: 0px !important;
+            &:not(:first-of-type){
+                margin-top: 15px;
+            }
+        }
+        span.classRaceSpan{
+            display: flex;
+            margin-left: 60px;
+            font-size: .95rem;
+        }
+        &:not(:first-of-type){
+            margin-top: 25px;
+        }
+        &:last-of-type{
+            margin-bottom: 50px;
+        }
+    }
+
+}
+
+
+
+#bugSection{
+    h2{
+        margin-top: 0 !important;
+        font-weight: 400;
+    }
+    h3{
+        margin-top: 1rem !important;
+        &:not(:first-of-type){
+            margin-top: 2rem !important;
+        }
+    }
+    ol {
+        counter-reset: item;
+    }
+    
+    li {
+        display: block;
+    }
+    
+    li:before {
+        content: counters(item, ".")". ";
+        counter-increment: item;
+    }
+    #bugContent{
+        margin-left: 25px;
     }
 }
