--- a/content/css/style.css
+++ b/content/css/style.css
@@ -5,6 +5,15 @@
           user-select: none;
 }
 
+img {
+  height: auto;
+  width: auto;
+  -o-object-fit: contain;
+     object-fit: contain;
+  -o-object-position: left;
+     object-position: left;
+}
+
 @-webkit-keyframes topNav_compress {
   0% {
     height: 50px;
@@ -162,7 +171,7 @@ header {
   -webkit-transition: .2s linear all;
   transition: .2s linear all;
   opacity: 1;
-  background: #333333;
+  background: #262626;
 }
 
 header.filled {
@@ -257,6 +266,10 @@ header.unfilled.filled div.nav_header > div.navMenu.noselect > div.menu-topmenu-
   height: 100%;
 }
 
+.navLogo-container:hover {
+  background: rgba(255, 255, 255, 0.3);
+}
+
 .navLogo-container:hover a > img {
   -webkit-filter: contrast(1);
           filter: contrast(1);
@@ -284,8 +297,8 @@ header.unfilled.filled div.nav_header > div.navMenu.noselect > div.menu-topmenu-
   display: flex;
   -ms-flex-item-align: center;
       align-self: center;
-  max-width: 100%;
-  max-height: 100%;
+  max-width: 95%;
+  max-height: 95%;
 }
 
 .testX {
@@ -551,7 +564,7 @@ header.unfilled.filled div.nav_header > div.navMenu.noselect > div.menu-topmenu-
 }
 
 .menu-topmenu-container .nav_topMenu li a:hover {
-  background-color: salmon;
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
 .menu-topmenu-container .nav_topMenu li a:hover:after {
@@ -560,6 +573,7 @@ header.unfilled.filled div.nav_header > div.navMenu.noselect > div.menu-topmenu-
 
 @media screen and (min-width: 768px) {
   .menu-topmenu-container .nav_topMenu li a:after {
+    opacity: 0;
     content: '';
     position: absolute;
     top: 33%;
@@ -633,10 +647,10 @@ header.unfilled.filled div.nav_header > div.navMenu.noselect > div.menu-topmenu-
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+      -ms-flex-direction: row;
+          flex-direction: row;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   padding: 20px;
@@ -644,19 +658,61 @@ header.unfilled.filled div.nav_header > div.navMenu.noselect > div.menu-topmenu-
       -ms-flex: 1;
           flex: 1;
   overflow: auto;
-  background: #f2f2f2;
+  background: #fcfcfc;
   font-family: Roboto;
 }
 
 .main-content-content-container h1 {
   margin-top: 1rem;
-  margin-bottom: .5rem;
-  font-size: 3rem;
+  margin-bottom: 1rem;
+  font-size: 2.25rem;
 }
 
 .main-content-content-container h2 {
   margin-top: 2rem;
   margin-bottom: .5rem;
-  font-size: 2rem;
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+.main-content-content-container h3 {
+  margin-top: 2rem;
+  margin-bottom: .5rem;
+  font-size: 1.25rem;
+  font-weight: 600;
+}
+
+.main-content-content-container.noPadding {
+  padding: 0px;
+}
+
+.main-content-content-container .main-content-content-left {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  width: 70%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.main-content-content-container .main-content-content-left.alone {
+  width: 100%;
+}
+
+.main-content-content-container .main-content-content-right {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  width: 30%;
+  height: 100%;
+  border-left: 1px solid #b3b3b3;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
 }
 /*# sourceMappingURL=style.css.map */
