--- a/content/css/style.scss
+++ b/content/css/style.scss
@@ -6,7 +6,7 @@
 
 $page-content-maxWidth: 1200px;
 $header:(
-    "background":hsla(0, 0%, 20%,1),
+    "background":hsla(0, 0%, 15%,1),
     "height": 50px,
 );
 $main-content-menu:(
@@ -14,6 +14,13 @@ $main-content-menu:(
     "text-color":hsl(0,0%,80%),
     "text-hover-color":hsl(0,0%,90%),
 );
+
+img{
+    height: auto;
+    width: auto;
+    object-fit: contain;
+    object-position: left;
+}
 
 
 
@@ -380,6 +387,7 @@ header{
     justify-content: center;
     height: 100%;
     &:hover{
+        background: hsla(0, 0%, 100%, .3);
         a > img{
             filter: contrast(1.0);
         }
@@ -394,8 +402,8 @@ header{
             filter: contrast(.9);
             display: flex;
             align-self: center;
-            max-width: 100%;
-            max-height: 100%;
+            max-width: 95%;
+            max-height: 95%;
         }
     }
 }
@@ -573,12 +581,13 @@ header{
                 align-items: center;
                 padding: 0px 15px;
                 &:hover{
-                    background-color: salmon;
+                    background-color: hsla(0, 0%, 100%, .3);
                     &:after{display: none;}
                 }
                 
                 @include media("screen", ">=tablet") {
                     &:after{
+                        opacity: 0;
                         content: '';
                         position: absolute;
                         top: 33%;
@@ -642,22 +651,51 @@ header{
 }
 .main-content-content-container{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     box-sizing: border-box;
     padding: 20px;
     flex: 1;
     overflow:auto;
-    background: hsl(0, 0%, 95%);
+    background: hsl(0, 0%, 99%);
     font-family: Roboto;
     
     h1{
         margin-top: 1rem;
-        margin-bottom: .5rem;
-        font-size: 3rem;
+        margin-bottom: 1rem;
+        font-size: 2.25rem;
     }
     h2{
         margin-top: 2rem;
         margin-bottom: .5rem;
-        font-size: 2rem;
+        font-size: 1.5rem;
+        font-weight: 600;
+    }
+    h3{
+        margin-top: 2rem;
+        margin-bottom: .5rem;
+        font-size: 1.25rem;
+        font-weight: 600;
+    }
+    
+    &.noPadding{
+        padding: 0px;
+    }
+
+    .main-content-content-left{
+        flex-direction: column;
+        display: inline-flex;
+        width: 70%;
+        height: fit-content;
+
+        &.alone{
+            width: 100%;
+        }
+    }
+    .main-content-content-right{
+        display: inline-flex;
+        width: 30%;
+        height: 100%;
+        border-left: 1px solid hsl(0, 0%, 70%);
+        height: fit-content;
     }
 }
